fixes gap that started appearing above site header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,7 +138,7 @@ a:hover {
   position: -ms-sticky;
   position: -o-sticky;
   position: sticky;
-  top: 0px;
+  top: -10px;
 }
 
 /* site title */
